Адаптирован блок words

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </header>
             <div class="words__row">
               <ul class="words__list">
-                <li>
+                <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
@@ -322,7 +322,7 @@
                     </div>
                   </a>
                 </li>
-                <li>
+                <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
@@ -350,7 +350,7 @@
                     </div>
                   </a>
                 </li>
-                <li>
+                <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
