Доработана кнопка раскрытия мобильного меню

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
-              <h1 class="intro__title">Find your custom matched commercial real estate space.</h1>
+              <h1 class="intro__title">Find your custom matched commercial real estate space</h1>
               <p class="intro__subtitle">
                 In oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique
               </p>
