--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="styles/css/main.css" />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <div class="container">
         <div class="header__body">
