--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
             </svg>
             <span class="logo__title">CutSpace</span>
           </div>
-          <input type="checkbox" id="menu" class="header__checkbox" />
-          <label for="menu" class="header__toggler">
-            <span class="header__line header__line--1"></span>
-            <span class="header__line header__line--2"></span>
-            <span class="header__line header__line--3"></span>
-          </label>
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -50,6 +44,11 @@
               </li>
             </ul>
           </nav>
+          <button type="button" class="header__toggler">
+            <span class="header__line header__line--1"></span>
+            <span class="header__line header__line--2"></span>
+            <span class="header__line header__line--3"></span>
+          </button>
         </div>
       </div>
     </header>
