--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           </ul>
         </div>
       </section>
-      <section class="section choose main__choose">
+      <section class="choose main__choose">
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
@@ -451,7 +451,7 @@
             </ul>
           </div>
           <ul class="footer__list">
-            <li class="footer-unit">
+            <li class="footer-unit footer__unit">
               <h5 class="footer-unit__title">Privacy</h5>
               <ul class="footer-unit__list">
                 <li class="footer-unit__item">
@@ -468,7 +468,7 @@
                 </li>
               </ul>
             </li>
-            <li class="footer-unit">
+            <li class="footer-unit footer__unit">
               <h5 class="footer-unit__title">Legal</h5>
               <ul class="footer-unit__list">
                 <li class="footer-unit__item">
@@ -485,7 +485,7 @@
                 </li>
               </ul>
             </li>
-            <li class="footer-unit">
+            <li class="footer-unit footer__unit">
               <h5 class="footer-unit__title">Contact</h5>
               <ul class="footer-unit__list">
                 <li class="footer-unit__item">
