Рефакторинг структуры папок со стилями

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="styles/css/main.css" />
   </head>
-  <body class="body">
-    <header class="header">
+  <body class="site">
+    <header class="header site__header">
       <div class="container">
         <div class="header__body">
           <div class="logo">
@@ -52,8 +52,8 @@
         </div>
       </div>
     </header>
-    <main class="main">
-      <section class="intro main__intro">
+    <main class="page site__page">
+      <section class="intro page__intro">
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </section>
-      <div class="partners main__partners">
+      <div class="partners page__partners">
         <div class="container">
           <ul class="partners__list">
             <li class="partners__item">
@@ -115,7 +115,7 @@
           </ul>
         </div>
       </div>
-      <section class="provide main__provide">
+      <section class="provide page__provide">
         <div class="container">
           <div class="provide__body">
             <h2 class="provide__title">We provide best space for you!</h2>
@@ -181,7 +181,7 @@
           </div>
         </div>
       </section>
-      <section class="using main__using">
+      <section class="using page__using">
         <div class="container">
           <div class="using__body">
             <figure class="using__picture">
@@ -209,7 +209,7 @@
           </div>
         </div>
       </section>
-      <section class="serve main__serve">
+      <section class="serve page__serve">
         <div class="container">
           <header class="serve__header">
             <h2 class="serve__title">Who do we serve?</h2>
@@ -239,7 +239,7 @@
           </ul>
         </div>
       </section>
-      <section class="choose main__choose">
+      <section class="choose page__choose">
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
@@ -282,7 +282,7 @@
           </ul>
         </div>
       </section>
-      <section class="words main__words">
+      <section class="words page__words">
         <div class="container container--wide">
           <div class="words__body">
             <header class="words__header">
@@ -387,7 +387,7 @@
           </div>
         </div>
       </section>
-      <section class="experience main__experience">
+      <section class="experience page__experience">
         <div class="container">
           <div class="experience__body">
             <div class="experience__content">
