--- a/index.html
+++ b/index.html
@@ -77,15 +77,11 @@
                 <button type="submit" class="button button--accented intro-form__button">Subscribe</button>
               </form>
             </div>
-
-            <figure class="intro__picture">
-              <img
-                src="./assets/images/content/intro.jpg"
-                srcset="./assets/images/content/intro@2x.jpg 2x"
-                alt="Intro image"
-                class="intro__image"
-              />
-            </figure>
+            <picture class="intro__picture">
+              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source srcset="./assets/images/content/intro.jpg 1x, ./assets/images/content/intro@2x.jpg 2x" />
+              <img src="./assets/images/content/intro.jpg" alt="Real estate photo" class="intro__image" />
+            </picture>
           </div>
         </div>
       </section>
@@ -122,14 +118,12 @@
 
             <div class="provide__gallery">
               <div class="provide__card provide__card--half">
-                <figure class="provide__picture">
-                  <img
-                    src="./assets/images/content/provide-01.jpg"
-                    srcset="./assets/images/content/provide-01@2x.jpg 2x"
-                    alt="Provide picture"
-                    class="provide__image"
+                <picture class="provide__picture">
+                  <source
+                    srcset="./assets/images/content/provide-01.jpg 1x, ./assets/images/content/provide-01@2x.jpg 2x"
                   />
-                </figure>
+                  <img src="./assets/images/content/provide-01.jpg" alt="Best space" class="provide__image" />
+                </picture>
                 <div class="provide__hint">
                   <div class="provide-hint">
                     <div class="provide-hint__icon">
@@ -146,14 +140,12 @@
                 </div>
               </div>
               <div class="provide__card">
-                <figure class="provide__picture provide__picture--sharp">
-                  <img
-                    src="./assets/images/content/provide-02.jpg"
-                    srcset="./assets/images/content/provide-02@2x.jpg 2x"
-                    alt="Provide picture"
-                    class="provide__image"
+                <picture class="provide__picture provide__picture--sharp">
+                  <source
+                    srcset="./assets/images/content/provide-02.jpg 1x, ./assets/images/content/provide-02@2x.jpg 2x"
                   />
-                </figure>
+                  <img src="./assets/images/content/provide-02.jpg" alt="Best choice" class="provide__image" />
+                </picture>
                 <div class="provide__hint">
                   <div class="provide-hint">
                     <div class="provide-hint__icon">
@@ -184,18 +176,14 @@
       <section class="using page__using">
         <div class="container">
           <div class="using__body">
-            <figure class="using__picture">
-              <img
-                src="./assets/images/content/using.jpg"
-                srcset="./assets/images/content/using@2x.jpg 2x"
-                alt="Using image"
-                class="using__image"
-              />
-            </figure>
+            <picture class="using__picture">
+              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source srcset="./assets/images/content/using.jpg 1x, ./assets/images/content/using@2x.jpg 2x" />
+              <img src="./assets/images/content/using.jpg" alt="" class="using__image" />
+            </picture>
             <div class="using__content">
               <h2 class="using__title">Start using our product</h2>
               <p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
-
               <div class="using__action">
                 <a href="#!" class="button button--accented using__button">Contact Us</a>
                 <button class="button using__button using__button--play">
@@ -296,14 +284,16 @@
                 <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
-                      <figure class="words-item__picture">
+                      <picture class="words-item__picture">
+                        <source
+                          srcset="./assets/images/content/words-01.jpg 1x, ./assets/images/content/words-01@2x.jpg 2x"
+                        />
                         <img
                           src="./assets/images/content/words-01.jpg"
-                          srcset="./assets/images/content/words-01@2x.jpg 2x"
                           alt="Arend Pellewever"
                           class="words-item__image"
                         />
-                      </figure>
+                      </picture>
                       <span class="words-item__icon">
                         <svg width="15px" height="15px" class="words-item__svg">
                           <use href="./assets/icons.svg#play" />
@@ -324,14 +314,16 @@
                 <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
-                      <figure class="words-item__picture">
+                      <picture class="words-item__picture">
+                        <source
+                          srcset="./assets/images/content/words-02.jpg 1x, ./assets/images/content/words-02@2x.jpg 2x"
+                        />
                         <img
                           src="./assets/images/content/words-02.jpg"
-                          srcset="./assets/images/content/words-02@2x.jpg 2x"
                           alt="Lisanne Viscaal"
                           class="words-item__image"
                         />
-                      </figure>
+                      </picture>
                       <span class="words-item__icon">
                         <svg width="15px" height="15px" class="words-item__svg">
                           <use href="./assets/icons.svg#play" />
@@ -352,14 +344,12 @@
                 <li class="words__item">
                   <a href="#!" class="words-item">
                     <div class="words-item__media">
-                      <figure class="words-item__picture">
-                        <img
-                          src="./assets/images/content/words-03.jpg"
-                          srcset="./assets/images/content/words-03@2x.jpg 2x"
-                          alt="Leo Knight"
-                          class="words-item__image"
+                      <picture class="words-item__picture">
+                        <source
+                          srcset="./assets/images/content/words-03.jpg 1x, ./assets/images/content/words-03@2x.jpg 2x"
                         />
-                      </figure>
+                        <img src="./assets/images/content/words-03.jpg" alt="Leo Knight" class="words-item__image" />
+                      </picture>
                       <span class="words-item__icon">
                         <svg width="15px" height="15px" class="words-item__svg">
                           <use href="./assets/icons.svg#play" />
@@ -395,14 +385,15 @@
               <p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
               <a href="#!" class="button button--blue experience__button">Contact Us</a>
             </div>
-            <figure class="experience__picture">
-              <img
-                src="./assets/images/content/expert.png"
-                srcset="./assets/images/content/expert@2x.png 2x"
-                alt="Expert"
-                class="experience__image"
+            <picture class="experience__picture">
+              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source
+                media="(max-width: 1219.98px)"
+                srcset="./assets/images/content/expert-lg.png 1x, ./assets/images/content/expert-lg@2x.png 2x"
               />
-            </figure>
+              <source srcset="./assets/images/content/expert-xl.png 1x, ./assets/images/content/expert-xl@2x.png 2x" />
+              <img src="./assets/images/content/expert-lg.png" alt="Expert" class="experience__image" />
+            </picture>
           </div>
         </div>
       </section>
