Обновлено верхнее меню
Изменены тексты пунктов меню
Добавлены якоря на разделы страницы
Добавлена смена активного пункта через js
Выполнен рефакторинг js для логики меню

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
-                <a href="#!" class="header__link">Home</a>
+                <a href="#aboutUs" class="header__link header__link--active">About us</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link header__link--active">About us</a>
+                <a href="#howToStart" class="header__link">How to start</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Find space</a>
+                <a href="#benefits" class="header__link">Benefits</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Share space</a>
+                <a href="#feedback" class="header__link">Feedback</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Promote space</a>
+                <a href="#contactUs" class="header__link">Contact us</a>
               </li>
             </ul>
           </nav>
@@ -53,7 +53,7 @@
       </div>
     </header>
     <main class="page site__page">
-      <section class="intro page__intro">
+      <section class="intro page__intro" id="aboutUs">
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
@@ -173,7 +173,7 @@
           </div>
         </div>
       </section>
-      <section class="using page__using">
+      <section class="using page__using" id="howToStart">
         <div class="container">
           <div class="using__body">
             <picture class="using__picture">
@@ -227,7 +227,7 @@
           </ul>
         </div>
       </section>
-      <section class="choose page__choose">
+      <section class="choose page__choose" id="benefits">
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
@@ -270,7 +270,7 @@
           </ul>
         </div>
       </section>
-      <section class="words page__words">
+      <section class="words page__words" id="feedback">
         <div class="container container--wide">
           <div class="words__body">
             <header class="words__header">
@@ -377,7 +377,7 @@
           </div>
         </div>
       </section>
-      <section class="experience page__experience">
+      <section class="experience page__experience" id="contactUs">
         <div class="container">
           <div class="experience__body">
             <div class="experience__content">
