Зафиксировано верхнее меню
В десктопе - к верхнему краю окна
В мобайле - подсветка кнопки бургер меню при скролле

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </li>
             </ul>
           </nav>
-          <button type="button" class="header__toggler">
+          <button type="button" class="header__burger">
             <span class="header__line header__line--1"></span>
             <span class="header__line header__line--2"></span>
             <span class="header__line header__line--3"></span>
