--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <header class="header site__header">
       <div class="container">
         <div class="header__body">
-          <div class="logo">
+          <a href="#" class="logo">
             <svg width="30px" height="30px">
               <title>CutSpace</title>
               <use href="./assets/icons.svg#logo" />
             </svg>
             <span class="logo__title">CutSpace</span>
-          </div>
+          </a>
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -53,7 +53,7 @@
       </div>
     </header>
     <main class="page site__page">
-      <section class="intro page__intro" id="aboutUs">
+      <section class="intro page__section page__section--intro" id="aboutUs">
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
@@ -85,7 +85,7 @@
           </div>
         </div>
       </section>
-      <div class="partners page__partners">
+      <div class="partners page__section page__section--partners">
         <div class="container">
           <ul class="partners__list">
             <li class="partners__item">
@@ -111,7 +111,7 @@
           </ul>
         </div>
       </div>
-      <section class="provide page__provide">
+      <section class="provide page__section page__section--provide">
         <div class="container">
           <div class="provide__body">
             <h2 class="provide__title">We provide best space for you!</h2>
@@ -173,7 +173,7 @@
           </div>
         </div>
       </section>
-      <section class="using page__using" id="howToStart">
+      <section class="using page__section page__section--using" id="howToStart">
         <div class="container">
           <div class="using__body">
             <picture class="using__picture">
@@ -197,7 +197,7 @@
           </div>
         </div>
       </section>
-      <section class="serve page__serve">
+      <section class="serve page__section page__section--serve">
         <div class="container">
           <header class="serve__header">
             <h2 class="serve__title">Who do we serve?</h2>
@@ -227,7 +227,7 @@
           </ul>
         </div>
       </section>
-      <section class="choose page__choose" id="benefits">
+      <section class="choose page__section page__section--choose" id="benefits">
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
@@ -270,7 +270,7 @@
           </ul>
         </div>
       </section>
-      <section class="words page__words" id="feedback">
+      <section class="words page__section page__section--words" id="feedback">
         <div class="container container--wide">
           <div class="words__body">
             <header class="words__header">
@@ -377,7 +377,7 @@
           </div>
         </div>
       </section>
-      <section class="experience page__experience" id="contactUs">
+      <section class="experience page__section page__section--experience" id="contactUs">
         <div class="container">
           <div class="experience__body">
             <div class="experience__content">
