--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <p class="intro__subtitle">
                 In oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique
               </p>
-              <form class="intro-form">
+              <form class="intro-form" method="post">
                 <label class="intro-form__label">
                   <svg width="24px" height="19px">
                     <use href="./assets/icons.svg#mail" />
