Установлен и настроен gulp
Сборка в папку dist
Папка dist в репозиторий не передается, планируется авто сборка

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="mask-icon" href="./assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#58bebf" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="styles/css/main.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="site">
     <header class="header site__header">
@@ -78,7 +78,7 @@
               </form>
             </div>
             <picture class="intro__picture">
-              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source media="(max-width: 991.98px)" srcset="./assets/images/1x1.png" />
               <source srcset="./assets/images/content/intro.jpg 1x, ./assets/images/content/intro@2x.jpg 2x" />
               <img src="./assets/images/content/intro.jpg" alt="Real estate photo" class="intro__image" />
             </picture>
@@ -177,7 +177,7 @@
         <div class="container">
           <div class="using__body">
             <picture class="using__picture">
-              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source media="(max-width: 991.98px)" srcset="./assets/images/1x1.png" />
               <source srcset="./assets/images/content/using.jpg 1x, ./assets/images/content/using@2x.jpg 2x" />
               <img src="./assets/images/content/using.jpg" alt="" class="using__image" />
             </picture>
@@ -386,7 +386,7 @@
               <a href="#!" class="button button--blue experience__button">Contact Us</a>
             </div>
             <picture class="experience__picture">
-              <source media="(max-width: 991.98px)" srcset="./assets/images/none.png" />
+              <source media="(max-width: 991.98px)" srcset="./assets/images/1x1.png" />
               <source
                 media="(max-width: 1219.98px)"
                 srcset="./assets/images/content/expert-lg.png 1x, ./assets/images/content/expert-lg@2x.png 2x"
