Создан отдельный класс для стилизации nav
Стили вынесены, js актуализирован

--- a/src/index.html
+++ b/src/index.html
@@ -25,22 +25,22 @@
             </svg>
             <span class="logo__title">CutSpace</span>
           </a>
-          <nav class="header__nav">
-            <ul class="header__list">
-              <li class="header__item">
-                <a href="#aboutUs" class="header__link header__link--active">About us</a>
+          <nav class="header-nav">
+            <ul class="header-nav__list">
+              <li class="header-nav__item">
+                <a href="#aboutUs" class="header-nav__link header-nav__link--active">About us</a>
               </li>
-              <li class="header__item">
-                <a href="#howToStart" class="header__link">How to start</a>
+              <li class="header-nav__item">
+                <a href="#howToStart" class="header-nav__link">How to start</a>
               </li>
-              <li class="header__item">
-                <a href="#benefits" class="header__link">Benefits</a>
+              <li class="header-nav__item">
+                <a href="#benefits" class="header-nav__link">Benefits</a>
               </li>
-              <li class="header__item">
-                <a href="#feedback" class="header__link">Feedback</a>
+              <li class="header-nav__item">
+                <a href="#feedback" class="header-nav__link">Feedback</a>
               </li>
-              <li class="header__item">
-                <a href="#contactUs" class="header__link">Contact us</a>
+              <li class="header-nav__item">
+                <a href="#contactUs" class="header-nav__link">Contact us</a>
               </li>
             </ul>
           </nav>
