Добавлены классы в тег source
Были указаны только для <image>

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,10 @@
             </div>
             <picture class="intro__picture">
               <source media="(max-width: 991.98px)" srcset="./assets/images/1x1.png" />
-              <source srcset="./assets/images/content/intro.jpg 1x, ./assets/images/content/intro@2x.jpg 2x" />
+              <source
+                srcset="./assets/images/content/intro.jpg 1x, ./assets/images/content/intro@2x.jpg 2x"
+                class="intro__image"
+              />
               <img src="./assets/images/content/intro.jpg" alt="Real estate photo" class="intro__image" />
             </picture>
           </div>
@@ -121,6 +124,7 @@
                 <picture class="provide__picture">
                   <source
                     srcset="./assets/images/content/provide-01.jpg 1x, ./assets/images/content/provide-01@2x.jpg 2x"
+                    class="provide__image"
                   />
                   <img src="./assets/images/content/provide-01.jpg" alt="Best space" class="provide__image" />
                 </picture>
@@ -143,6 +147,7 @@
                 <picture class="provide__picture provide__picture--sharp">
                   <source
                     srcset="./assets/images/content/provide-02.jpg 1x, ./assets/images/content/provide-02@2x.jpg 2x"
+                    class="provide__image"
                   />
                   <img src="./assets/images/content/provide-02.jpg" alt="Best choice" class="provide__image" />
                 </picture>
@@ -178,7 +183,10 @@
           <div class="using__body">
             <picture class="using__picture">
               <source media="(max-width: 991.98px)" srcset="./assets/images/1x1.png" />
-              <source srcset="./assets/images/content/using.jpg 1x, ./assets/images/content/using@2x.jpg 2x" />
+              <source
+                srcset="./assets/images/content/using.jpg 1x, ./assets/images/content/using@2x.jpg 2x"
+                class="using__image"
+              />
               <img src="./assets/images/content/using.jpg" alt="" class="using__image" />
             </picture>
             <div class="using__content">
@@ -287,6 +295,7 @@
                       <picture class="words-item__picture">
                         <source
                           srcset="./assets/images/content/words-01.jpg 1x, ./assets/images/content/words-01@2x.jpg 2x"
+                          class="words-item__image"
                         />
                         <img
                           src="./assets/images/content/words-01.jpg"
@@ -317,6 +326,7 @@
                       <picture class="words-item__picture">
                         <source
                           srcset="./assets/images/content/words-02.jpg 1x, ./assets/images/content/words-02@2x.jpg 2x"
+                          class="words-item__image"
                         />
                         <img
                           src="./assets/images/content/words-02.jpg"
@@ -347,6 +357,7 @@
                       <picture class="words-item__picture">
                         <source
                           srcset="./assets/images/content/words-03.jpg 1x, ./assets/images/content/words-03@2x.jpg 2x"
+                          class="words-item__image"
                         />
                         <img src="./assets/images/content/words-03.jpg" alt="Leo Knight" class="words-item__image" />
                       </picture>
@@ -390,6 +401,7 @@
               <source
                 media="(max-width: 1219.98px)"
                 srcset="./assets/images/content/expert-lg.png 1x, ./assets/images/content/expert-lg@2x.png 2x"
+                class="experience__image"
               />
               <source srcset="./assets/images/content/expert-xl.png 1x, ./assets/images/content/expert-xl@2x.png 2x" />
               <img src="./assets/images/content/expert-lg.png" alt="Expert" class="experience__image" />
